--- a/qml.qrc
+++ b/qml.qrc
@@ -8,5 +8,6 @@
         <file>icons/merge.svg</file>
         <file>icons/open.svg</file>
         <file>MergeLog.qml</file>
+        <file>icons/close.svg</file>
     </qresource>
 </RCC>
