btn: scroll down

--- a/qml.qrc
+++ b/qml.qrc
@@ -11,5 +11,6 @@
         <file>icons/close.svg</file>
         <file>icons/felt.svg</file>
         <file>icons/clear.svg</file>
+        <file>icons/down.svg</file>
     </qresource>
 </RCC>
