--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -41,6 +41,7 @@
     <bool>false</bool>
    </attribute>
    <addaction name="separator"/>
+   <addaction name="actionreolad_current"/>
    <addaction name="actionOpen"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
@@ -57,6 +58,18 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+O</string>
+   </property>
+  </action>
+  <action name="actionreolad_current">
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/icons/update.svg</normaloff>:/icons/update.svg</iconset>
+   </property>
+   <property name="text">
+    <string>reolad all</string>
+   </property>
+   <property name="toolTip">
+    <string>reolad current</string>
    </property>
   </action>
  </widget>
