--- a/timer_setup.ui
+++ b/timer_setup.ui
@@ -13,29 +13,51 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout">
+  <layout class="QHBoxLayout" name="horizontalLayout_2">
    <item>
-    <widget class="QLabel" name="label">
+    <widget class="QCheckBox" name="checkBox">
      <property name="text">
-      <string>Timer</string>
+      <string/>
      </property>
     </widget>
    </item>
    <item>
-    <widget class="QLabel" name="timerValueLabel">
-     <property name="text">
-      <string>TextLabel</string>
+    <widget class="QGroupBox" name="groupBox">
+     <property name="title">
+      <string/>
      </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QSlider" name="horizontalSlider">
-     <property name="maximum">
-      <number>60</number>
+     <property name="flat">
+      <bool>false</bool>
      </property>
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
+     <property name="checkable">
+      <bool>false</bool>
      </property>
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <item>
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>Timer</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="timerValueLabel">
+        <property name="text">
+         <string>TextLabel</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QSlider" name="horizontalSlider">
+        <property name="maximum">
+         <number>60</number>
+        </property>
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </widget>
    </item>
   </layout>
