--- a/timer_setup.ui
+++ b/timer_setup.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>457</width>
-    <height>56</height>
+    <height>57</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -49,6 +49,9 @@
       </item>
       <item>
        <widget class="QSlider" name="horizontalSlider">
+        <property name="minimum">
+         <number>1</number>
+        </property>
         <property name="maximum">
          <number>60</number>
         </property>
