--- a/resources.qrc
+++ b/resources.qrc
@@ -7,5 +7,6 @@
         <file>icons/felt.svg</file>
         <file>icons/clear.svg</file>
         <file>icons/down.svg</file>
+        <file>icons/autoscroll.svg</file>
     </qresource>
 </RCC>
