copy by context menu
issue #6

--- a/logviewer.ui
+++ b/logviewer.ui
@@ -40,6 +40,11 @@
     </widget>
    </item>
   </layout>
+  <action name="actioncopy">
+   <property name="text">
+    <string>copy</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections/>
