--- a/logviewer.ui
+++ b/logviewer.ui
@@ -13,8 +13,8 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <item>
     <widget class="QListView" name="listView">
      <property name="frameShape">
       <enum>QFrame::StyledPanel</enum>
