--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -86,6 +86,49 @@
       </layout>
      </widget>
     </item>
+    <item row="2" column="0">
+     <widget class="QFrame" name="fltrFrame">
+      <property name="frameShape">
+       <enum>QFrame::Box</enum>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Raised</enum>
+      </property>
+      <layout class="QVBoxLayout" name="verticalLayout">
+       <item>
+        <layout class="QHBoxLayout" name="horizontalLayout_2">
+         <item>
+          <widget class="QLineEdit" name="fltrEdit"/>
+         </item>
+         <item>
+          <widget class="QPushButton" name="addFltrButton">
+           <property name="text">
+            <string>Add filter</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item>
+        <widget class="QListView" name="filtrListView">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Expanding" vsizetype="Minimum">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="rmFltrButton">
+         <property name="text">
+          <string>Remove</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menuBar">
@@ -123,6 +166,7 @@
     </property>
     <addaction name="actionshow_toolbar"/>
     <addaction name="actionautoscroll_enabled"/>
+    <addaction name="actionEnable_filtration"/>
     <addaction name="actionselect_text_encoding"/>
    </widget>
    <widget class="QMenu" name="menuEdit">
@@ -157,6 +201,7 @@
    <addaction name="actionautoscroll_enabled"/>
    <addaction name="actionFind"/>
    <addaction name="actionfont_selection"/>
+   <addaction name="actionEnable_filtration"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <action name="actionOpen">
@@ -287,6 +332,18 @@
     <string>Recent files</string>
    </property>
   </action>
+  <action name="actionEnable_filtration">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/icons/filter.svg</normaloff>:/icons/filter.svg</iconset>
+   </property>
+   <property name="text">
+    <string>Enable filtration</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources>
@@ -322,6 +379,22 @@
     <hint type="destinationlabel">
      <x>646</x>
      <y>443</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>fltrEdit</sender>
+   <signal>returnPressed()</signal>
+   <receiver>addFltrButton</receiver>
+   <slot>click()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>359</x>
+     <y>319</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>741</x>
+     <y>320</y>
     </hint>
    </hints>
   </connection>
