--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -75,7 +75,7 @@
             </widget>
            </item>
            <item row="0" column="1">
-            <widget class="QTimeEdit" name="rangeFrom"/>
+            <widget class="QWidget" name="rangeFrom" native="true"/>
            </item>
            <item row="1" column="0">
             <widget class="QLabel" name="label_3">
@@ -85,7 +85,7 @@
             </widget>
            </item>
            <item row="1" column="1">
-            <widget class="QTimeEdit" name="rangeTo"/>
+            <widget class="QWidget" name="rangeTo" native="true"/>
            </item>
           </layout>
          </widget>
