--- a/src/logviewer.ui
+++ b/src/logviewer.ui
@@ -15,6 +15,13 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
+    <widget class="QProgressBar" name="progressBar">
+     <property name="value">
+      <number>0</number>
+     </property>
+    </widget>
+   </item>
+   <item>
     <widget class="QListView" name="listView">
      <property name="frameShape">
       <enum>QFrame::StyledPanel</enum>
